css/tooplate-style.css
/* ... */
.loaded #loader {
  opacity: 0;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}
.loaded #loader-wrapper {
  visibility: hidden;

  -webkit-transform: translateY(-100%); /* Chrome, Opera 15+, Safari 3.1+ */
  -ms-transform: translateY(-100%); /* IE 9 */
  transform: translateY(-100%); /* Firefox 16+, IE 10+, Opera */

  -webkit-transition: all 0.3s 1s ease-out;
  transition: all 0.3s 1s ease-out;
}

/* JavaScript Turned Off */
.no-js #loader-wrapper {
  display: none;
}

.dropped-content{
  display: flex;
  justify-content: space-between;
  left: 10rem;
  
}
.improving-links{
  /* display: flex;
  justify-content: space-between; */
  display: inline-block;
  margin-right: 14rem;
  border-radius: 50%;
  padding: 0rem;
  width: 5rem;
  

  
}
.droppedimage{
  border:5px solid rgba(19, 18, 18, 0.712);
  transition: 0.5s;
  overflow: hidden;
  margin-left: 2rem;
  padding: 0.5rem;
  width: 15rem;
  height: auto;
  border-radius: 50%;
}
.droppedimage:hover{
  border:1px solid rgb(11, 207, 181);
  overflow: hidden;
  padding: 0rem;
  width: 15rem;
  height: auto;
  border-radius: 0%;
}
.dropbtn{
  margin-bottom: 1rem;
  transition: 0.25s;
  border-radius: 0;
  padding: 2px;
  height: 3rem;
  width: 10rem;
  outline: none !important;
  border: none;
  color:white;
  background-color: #1c1c1da4;
}
.dropbtn:hover{
  border-radius: 0;
  padding: 2px;
  height: 3rem;
  width: 10rem;
  outline: none !important;
  border: none;
  color:white;
  background-color: #1b6d7c;
}
.bottomimage{
  width:10em;
}

@media (min-width: 520px){
  .video{
    width:900px; 
    height:506px;
  }
  #vid{
    position: relative;
    top: -5rem;
    right: 29rem;

  }

  .tm-content {
    padding-bottom: 50px;
    width: 100%;
    display: flex;
    justify-content: flex-end;
  } 
}
@media (max-width: 991px) {
  .tm-bottom-container {
    position: static;
  }

  .grid {
    max-width: 640px;
  }
}

@media (max-width: 767px) {
  .dropped-content{
    display: block;
   }
   .droppedimage{
     position: relative;
     top: -1rem;
     left: -3rem;
   }
   .improving-links{
     height: 8rem;
     border-radius: 50%;
     margin: 4rem;
     padding: 1rem;
     width: 9rem;
   }
   .video{
     width: 350px;
     height: 197px;
   }
  .tm-site-title {
    font-size: 3rem;
  }
  .tm-top-container {
    flex-direction: column-reverse;
  }

  .tm-site-header-box {
    margin-bottom: 0;
  }

  .tm-nav {
    align-self: flex-end;
    margin-right: 40px;
  }

  .tm-section {
    margin: 0 auto;
    padding-left: 15px;
    padding-right: 15px;
    width: 100%;
  }

  .tm-section-title {
    margin-left: 0;
    font-size: 3rem;
  }

  .grid {
    max-width: 420px;
  }

  .slick-dots {
    bottom: -35px;
  }
}

@media (max-width: 519px) {
  .dropped-content{
   display: block;
  }
  .droppedimage{
    position: relative;
    top: -1rem;
    left: -3rem;
  }
  .improving-links{
    height: 8rem;
    border-radius: 50%;
    margin: 4rem;
    padding: 0.5rem;
    width: 9rem;
    height: auto;
  }
  .video{
    width: 350px;
    height: 197px;
  }
  .footer-line{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 0.80rem;
  }
  .bottomimage{
    position: relative;
    left: -0.7rem;
    width:7rem;
  }
  .tm-content {
    padding-bottom: 50px;
    width: 100%;
    /* display: flex;
    justify-content: flex-end; */
  } 
  .grid {
    max-width: 100px;
  }

  .slick-dots {
    position: static;
    margin-top: 30px;
  }

  .slick-dotted.slick-slider {
    margin-bottom: 0;
    padding-bottom: 0;
  }

  .tm-section-title {
    font-size: 2.4rem;
  }
}

.tm-static {
  position: static;
}

